--- a/sections/protein.html
+++ b/sections/protein.html
@@ -1,8 +1,8 @@
 <div id="protein" class="section">
     <h3>Günlük Protein İhtiyacı</h3>
-    <input type="number" id="p_kilo" placeholder="Kilonuz (kg)" onkeyup="if(event.keyCode === 13) hesaplaProtein()" />
+    <input type="number" id="p_kilo" placeholder="Kilonuz (kg)">
     <span id="p_kilo_warning" class="input-warning"></span>
-    <select id="p_hedef" onchange="hesaplaProtein()">
+    <select id="p_hedef">
       <option value="">-- Hedefinizi Seçiniz --</option>
       <option value="koruma">Kilo Korumak (Maintenance)</option>
       <option value="alma">Kilo Almak (Bulk)</option>
@@ -18,6 +18,18 @@
         <br><strong>Nasıl kullanılır:</strong> Günlük ihtiyacı karşılamak üzere ana öğünlere ve ara öğünlere yayılarak alınır. Protein tozları pratik bir ek olabilir.
         <br><strong>Etkisi ne zaman görülür:</strong> Düzenli ve yeterli alımda kas gelişimi ve toparlanması üzerinde uzun vadeli etki gösterir. Akut olarak tokluk hissi sağlar.
       </div>
+
+      <h5>Sıkça Sorulan Sorular:</h5>
+      <div class="not-metin">
+        <!-- YENİ EKLENEN SORU -->
+        <strong>Bitkisel protein tozları (bezelye, pirinç) hayvansal protein kadar etkili mi?</strong><br>
+        Bezelye proteini (lisin açısından zengin) ve pirinç proteini (metiyonin açısından zengin) 70:30 oranında karıştırılırsa, whey proteine yakın amino asit profili sağlar. Veganlar için BCAA eklenmesi önerilir.
+
+        <!-- MEVCUT SORULAR -->
+        <br><br><strong>Fazla protein böbreklere zarar verir mi?</strong><br>
+        Sağlıklı bireylerde önerilen dozlarda (2.4g/kg'ya kadar) zararlı değildir. Ancak mevcut böbrek hastalığı olanlar doktora danışmalıdır.
+      </div>
+
       <div class="doz-bilgisi">
         <h6>Doz Aşımı (Hafifçe Yüksek Alım):</h6>
         <ul class="not-maddeler">
@@ -41,11 +53,11 @@
           <li><strong>Günlük 30 gram üzeri ve uzun süreli kullanım:</strong>
             <ul>
               <li><span class="kirmizi">Olumsuz Etkileri:</span>
-                <ul>
-                   <li>Mide rahatsızlığı, bulantı, ishal.</li>
-                   <li>Uzun süreli aşırı alım böbrekler üzerinde ek yük oluşturabilir (özellikle mevcut böbrek hastalığı olanlar için).</li>
-                   <li>Vücutta sıvı dengesizliği.</li>
-                </ul>
+                  <ul>
+                     <li>Mide rahatsızlığı, bulantı, ishal.</li>
+                     <li>Uzun süreli aşırı alım böbrekler üzerinde ek yük oluşturabilir (özellikle mevcut böbrek hastalığı olanlar için).</li>
+                     <li>Vücutta sıvı dengesizliği.</li>
+                  </ul>
               </li>
             </ul>
           </li>
