--- a/sections/protein.html
+++ b/sections/protein.html
@@ -1,70 +1,105 @@
 <div id="protein" class="section">
-    <h3>Günlük Protein İhtiyacı</h3>
-    <input type="number" id="p_kilo" placeholder="Kilonuz (kg)">
-    <span id="p_kilo_warning" class="input-warning"></span>
-    <select id="p_hedef">
-      <option value="">-- Hedefinizi Seçiniz --</option>
-      <option value="koruma">Kilo Korumak (Maintenance)</option>
-      <option value="alma">Kilo Almak (Bulk)</option>
-      <option value="verme">Kilo Vermek (Definasyon)</option>
-    </select>
-    <span id="p_hedef_warning" class="input-warning"></span>
-    <button onclick="hesaplaProtein()">Hesapla</button>
-    <div id="proteinSonuc" class="result"></div>
-    <div class="supplement-section-info">
+  <h3>Günlük Protein İhtiyacı</h3>
+  <input type="number" id="p_kilo" placeholder="Kilonuz (kg)">
+  <span id="p_kilo_warning" class="input-warning"></span>
+  <select id="p_hedef">
+    <option value="">-- Hedefinizi Seçiniz --</option>
+    <option value="koruma">Kilo Korumak (Maintenance)</option>
+    <option value="alma">Kilo Almak (Bulk)</option>
+    <option value="verme">Kilo Vermek (Definasyon)</option>
+  </select>
+  <span id="p_hedef_warning" class="input-warning"></span>
+  <button onclick="hesaplaProtein()">Hesapla</button>
+  <div id="proteinSonuc" class="result"></div>
+
+  <div class="supplement-section-info">
+
+    <!-- Bilgilendirme -->
+    <div class="info-section">
       <h5>Protein Hakkında Bilgi:</h5>
       <div class="not-metin">
         <strong>Ne işe yarar:</strong> Kas onarımı ve büyümesi için temel yapı taşıdır. Tokluk hissini artırır, metabolizmayı hızlandırır.
         <br><strong>Nasıl kullanılır:</strong> Günlük ihtiyacı karşılamak üzere ana öğünlere ve ara öğünlere yayılarak alınır. Protein tozları pratik bir ek olabilir.
         <br><strong>Etkisi ne zaman görülür:</strong> Düzenli ve yeterli alımda kas gelişimi ve toparlanması üzerinde uzun vadeli etki gösterir. Akut olarak tokluk hissi sağlar.
       </div>
-
-      <h5>Sıkça Sorulan Sorular:</h5>
-      <div class="not-metin">
-        <!-- YENİ EKLENEN SORU -->
-        <strong>Bitkisel protein tozları (bezelye, pirinç) hayvansal protein kadar etkili mi?</strong><br>
-        Bezelye proteini (lisin açısından zengin) ve pirinç proteini (metiyonin açısından zengin) 70:30 oranında karıştırılırsa, whey proteine yakın amino asit profili sağlar. Veganlar için BCAA eklenmesi önerilir.
-
-        <!-- MEVCUT SORULAR -->
-        <br><br><strong>Fazla protein böbreklere zarar verir mi?</strong><br>
-        Sağlıklı bireylerde önerilen dozlarda (2.4g/kg'ya kadar) zararlı değildir. Ancak mevcut böbrek hastalığı olanlar doktora danışmalıdır.
-      </div>
-
-      <div class="doz-bilgisi">
-        <h6>Doz Aşımı (Hafifçe Yüksek Alım):</h6>
-        <ul class="not-maddeler">
-          <li><span class="turuncu">Olası Olumsuz Etkileri:</span>
-            <ul>
-              <li>Hafif şişkinlik, gaz.</li>
-              <li>Enerji dengesinde hafif kaymalar (karbonhidrat ve yağ alımı azaldığında).</li>
-            </ul>
-          </li>
-          <li><span class="yesil">Olası Olumlu Etkileri:</span>
-            <ul>
-              <li>Belirli durumlarda tokluk hissini artırabilir, bu da kilo kontrolüne yardımcı olabilir.</li>
-              <li>Yoğun antrenman dönemlerinde kas yıkımını minimize etmeye yardımcı olabilir.</li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-      <div class="doz-bilgisi danger">
-        <h6>Aşırı Doz Aşımı (Çok Yüksek ve Uzun Süreli Alım):</h6>
-        <ul class="not-maddeler">
-          <li><strong>Günlük 30 gram üzeri ve uzun süreli kullanım:</strong>
-            <ul>
-              <li><span class="kirmizi">Olumsuz Etkileri:</span>
-                  <ul>
-                     <li>Mide rahatsızlığı, bulantı, ishal.</li>
-                     <li>Uzun süreli aşırı alım böbrekler üzerinde ek yük oluşturabilir (özellikle mevcut böbrek hastalığı olanlar için).</li>
-                     <li>Vücutta sıvı dengesizliği.</li>
-                  </ul>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
     </div>
-    <div class="disclaimer">
-      Uyarı: Bu hesaplayıcıdaki bilgiler genel rehber niteliğindedir ve tıbbi tavsiye yerine geçmez. Sağlık durumunuz veya supplement kullanımı hakkında karar vermeden önce daima bir sağlık profesyoneline danışın.
+
+    <!-- SSS -->
+    <div class="faq-section">
+      <h5>Sıkça Sorulan Sorular:</h5>
+      <div class="accordion-container">
+
+        <!-- 1. Fazla protein böbreklere zarar verir mi? -->
+        <div class="accordion-item">
+  <button class="accordion-header">Fazla protein zararlı mı?</button>
+  <div class="accordion-content">
+    <div class="not-metin">
+      <ul>
+        <li>Sağlıklı bireylerde günlük 2.0–2.4 g/kg seviyesine kadar protein alımı genellikle güvenlidir.</li>
+        <li>Uzun süreli ve aşırı alım (>3 g/kg/gün), özellikle sıvı alımı yetersizse böbrekler üzerinde ek yük oluşturabilir.</li>
+        <li>Mevcut böbrek hastalığı olan bireylerde protein kısıtlaması gerekebilir; mutlaka doktora danışılmalıdır.</li>
+        <li>Karaciğer fonksiyonları normal olan bireylerde doğrudan toksik etki bildirilmemiştir.</li>
+        <li>Sindirim sisteminde şişkinlik, gaz, ishal gibi yan etkiler görülebilir; özellikle düşük kaliteli protein kaynaklarında.</li>
+      </ul>
     </div>
   </div>
+</div>
+
+        <!-- 2. Bitkisel protein tozları etkili mi? -->
+        <div class="accordion-item">
+          <button class="accordion-header">Bitkisel protein tozları (bezelye, pirinç) hayvansal protein kadar etkili mi?</button>
+          <div class="accordion-content">
+            <div class="not-metin">
+              <ul>
+                <li>Bezelye proteini (lisin açısından zengin) ve pirinç proteini (metiyonin açısından zengin) 70:30 oranında karıştırılırsa, whey proteine yakın amino asit profili sağlar.</li>
+                <li>Veganlar için BCAA eklenmesi önerilir.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- Doz Bilgisi -->
+    <div class="doz-bilgisi">
+      <h6>Doz Aşımı (Hafifçe Yüksek Alım):</h6>
+      <ul class="not-maddeler">
+        <li><span class="turuncu">Olası Olumsuz Etkileri:</span>
+          <ul>
+            <li>Hafif şişkinlik, gaz.</li>
+            <li>Enerji dengesinde hafif kaymalar (karbonhidrat ve yağ alımı azaldığında).</li>
+          </ul>
+        </li>
+        <li><span class="yesil">Olası Olumlu Etkileri:</span>
+          <ul>
+            <li>Belirli durumlarda tokluk hissini artırabilir, bu da kilo kontrolüne yardımcı olabilir.</li>
+            <li>Yoğun antrenman dönemlerinde kas yıkımını minimize etmeye yardımcı olabilir.</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
+    <div class="doz-bilgisi danger">
+      <h6>Aşırı Doz Aşımı (Çok Yüksek ve Uzun Süreli Alım):</h6>
+      <ul class="not-maddeler">
+        <li><strong>Günlük 30 gram üzeri ve uzun süreli kullanım:</strong>
+          <ul>
+            <li><span class="kirmizi">Olumsuz Etkileri:</span>
+              <ul>
+                <li>Mide rahatsızlığı, bulantı, ishal.</li>
+                <li>Uzun süreli aşırı alım böbrekler üzerinde ek yük oluşturabilir (özellikle mevcut böbrek hastalığı olanlar için).</li>
+                <li>Vücutta sıvı dengesizliği.</li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
+  </div>
+
+  <div class="disclaimer">
+    Uyarı: Bu hesaplayıcıdaki bilgiler genel rehber niteliğindedir ve tıbbi tavsiye yerine geçmez. Sağlık durumunuz veya supplement kullanımı hakkında karar vermeden önce daima bir sağlık profesyoneline danışın.
+  </div>
+</div>
