--- a/sections/protein.html
+++ b/sections/protein.html
@@ -14,22 +14,19 @@
 
   <div class="supplement-section-info">
 
-    <!-- Bilgilendirme -->
     <div class="info-section">
       <h5>Protein Hakkında Bilgi:</h5>
       <div class="not-metin">
         <strong>Ne işe yarar:</strong> Kas onarımı ve büyümesi için temel yapı taşıdır. Tokluk hissini artırır, metabolizmayı hızlandırır.
         <br><strong>Nasıl kullanılır:</strong> Günlük ihtiyacı karşılamak üzere ana öğünlere ve ara öğünlere yayılarak alınır. Protein tozları pratik bir ek olabilir.
-        <br><strong>Etkisi ne zaman görülür:</strong> Düzenli ve yeterli alımda kas gelişimi ve toparlanması üzerinde uzun vadeli etki gösterir. Akut olarak tokluk hissi sağlar.
+        <br><strong>Etki tipi ve süresi nedir :</strong> <span class="uzun-vade-vurgu">Etkisi uzun vadelidir.</span> Düzenli ve yeterli alımda kas gelişimi ve toparlanması üzerinde etki gösterir ve akut olarak tokluk hissi sağlar.
       </div>
     </div>
 
-    <!-- SSS -->
     <div class="faq-section">
       <h5>Sıkça Sorulan Sorular:</h5>
       <div class="accordion-container">
 
-        <!-- 1. Fazla protein böbreklere zarar verir mi? -->
         <div class="accordion-item">
   <button class="accordion-header">Fazla protein zararlı mı?</button>
   <div class="accordion-content">
@@ -45,7 +42,6 @@
   </div>
 </div>
 
-        <!-- 2. Bitkisel protein tozları etkili mi? -->
         <div class="accordion-item">
           <button class="accordion-header">Bitkisel protein tozları (bezelye, pirinç) hayvansal protein kadar etkili mi?</button>
           <div class="accordion-content">
@@ -61,7 +57,6 @@
       </div>
     </div>
 
-    <!-- Doz Bilgisi -->
     <div class="doz-bilgisi">
       <h6>Doz Aşımı (Hafifçe Yüksek Alım):</h6>
       <ul class="not-maddeler">
