--- a/sections/protein.html
+++ b/sections/protein.html
@@ -75,22 +75,33 @@
       </ul>
     </div>
 
-    <div class="doz-bilgisi danger">
-      <h6>Aşırı Doz Aşımı (Çok Yüksek ve Uzun Süreli Alım):</h6>
-      <ul class="not-maddeler">
-        <li><strong>Günlük 30 gram üzeri ve uzun süreli kullanım:</strong>
+ <div class="doz-bilgisi danger">
+  <h6>Aşırı Doz Aşımı (Çok Yüksek ve Uzun Süreli Alım):</h6>
+  <ul class="not-maddeler">
+    <li><strong>Günlük 3.5 gr/kg üzeri ve uzun süreli kullanım:</strong>
+      <ul>
+        <li><span class="kirmizi">Olumsuz Etkileri:</span>
           <ul>
-            <li><span class="kirmizi">Olumsuz Etkileri:</span>
-              <ul>
-                <li>Mide rahatsızlığı, bulantı, ishal.</li>
-                <li>Uzun süreli aşırı alım böbrekler üzerinde ek yük oluşturabilir (özellikle mevcut böbrek hastalığı olanlar için).</li>
-                <li>Vücutta sıvı dengesizliği.</li>
-              </ul>
-            </li>
+            <li>Mide rahatsızlığı, bulantı, ishal.</li>
+            <li>Uzun süreli aşırı alım böbrekler üzerinde ek yük oluşturabilir (özellikle mevcut böbrek hastalığı olanlar için).</li>
+            <li>Vücutta sıvı dengesizliği.</li>
           </ul>
         </li>
       </ul>
-    </div>
+    </li>
+    <li><strong>Tek seferde 0.8 gr/kg üzeri alım:</strong>
+      <ul>
+        <li><span class="kirmizi">Olumsuz Etkileri:</span>
+          <ul>
+            <li>Akut mide bulantısı, şişkinlik ve geçici ishal.</li>
+            <li>Osmotik yük nedeniyle bağırsaklarda sıvı çekilmesi.</li>
+            <li>Hızlı alım sonrası geçici elektrolit dengesizliği.</li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+  </ul>
+</div>
 
   </div>
 
